--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-clickaway": "^2.2.2",
+    "vue-intersect": "^1.1.6",
+    "vue-intersection-observer": "^0.1.7",
+    "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.13",
     "@vue/cli-service": "~4.5.0",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
