--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "screen-size-vue": "^1.0.2",
     "vue": "^2.6.11",
     "vue-clickaway": "^2.2.2",
     "vue-intersect": "^1.1.6",
